# example_plugin

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/common/: common.hpp
src/include/: example_plugin.inc
src/natives/: natives.cpp  natives.hpp
src/utilities/: utilities.cpp  utilities.hpp
